Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-21857

GDB is not catching late crashes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.8.2
    • Qt Creator 4.8.0, Qt Creator 4.8.1
    • Debugger
    • None
    • Linux/X11
    • 3fdb5f53e31f615836b8ed13cecb9527ba165e3c

    Description

      Steps to reproduce:

       - create a new QML application 

       - change main.cpp to:

      #include <QGuiApplication>
      #include <QQmlApplicationEngine>
      
      struct Test {
          ~Test() {
              int *crash = nullptr;
              crash[10] = 11;
          }
      };
      
      Test t;
      
      int main(int argc, char *argv[])
      {
          QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);
      
          QGuiApplication app(argc, argv);
      
          QQmlApplicationEngine engine;
          engine.load(QUrl(QStringLiteral("qrc:/main.qml")));
          if (engine.rootObjects().isEmpty())
              return -1;
      
          return 0;//app.exec();
      }
      

       - start in debug mode

       

      Before 4.8, QtC catched the crash. Also if I comment all Qt stuff from main() it catches the crash.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hjk hjk
            taipan BogDan Vatra
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes