Debugger: Decouple combined engine rampdown further

There are apparently uses where one still want to have a fully
functional C++ engine even when QML is already done.

Task-number: QTCREATORBUG-21857
Change-Id: I5dfd80e5ff02dcc3e5e2d6b5913a75af071f53d3
Reviewed-by: BogDan Vatra <bogdan@kdab.com>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>